2010-09-27  Anders Carlsson  <andersca@apple.com>

        Fix thinko.

        * runtime/JSCell.h:

2010-09-27  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Roben.

        Try to fix Windows build.

        * runtime/JSCell.h:
        (JSC::MSVCBugWorkaround::MSVCBugWorkaround):
        (JSC::MSVCBugWorkaround::~MSVCBugWorkaround):

2010-09-27  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Darin Adler.

        Add operator == for AtomicString and Vector<Uchar>
        https://bugs.webkit.org/show_bug.cgi?id=46509

        * JavaScriptCore.exp:
        * wtf/text/AtomicString.cpp:
        (WTF::operator==):
        * wtf/text/AtomicString.h:
        (WTF::operator==):
        (WTF::operator!=):

2010-09-27  Anders Carlsson  <andersca@apple.com>

        Try to fix the Windows build.

        * wtf/Noncopyable.h:

2010-09-26  Anders Carlsson  <andersca@apple.com>

        Reviewed by Alexey Proskuryakov and Adam Barth.

        Add WTF_MAKE_NONCOPYABLE macro
        https://bugs.webkit.org/show_bug.cgi?id=46589

        Going forward, we'd like to get rid of the Noncopyable and FastAllocBase classes. The
        reason for this is that the Itanium C++ ABI states that no empty classes of the same type
        can be laid out at the same offset in the class. This can result in objects getting larger
        which leads to memory regressions. (One example of this is the String class which grew by
        sizeof(void*) when both its base class and its first member variable inherited indirectly
        from FastAllocBase).

        * wtf/Noncopyable.h:
        Add a WTF_MAKE_NONCOPYABLE macro and get rid of NoncopyableCustomAllocated.
        
        * runtime/JSCell.h:
        * wtf/RefCounted.h:
        Don't inherit from NoncopyableCustomAllocated. Instead, use WTF_MAKE_NONCOPYABLE.

2010-09-27  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] use ENABLE(GLIB_SUPPORT)